[package]
name = "adb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } #序列化
serde_json = "1.0"                                 #序列化
regex = "1.10.4"                                   #正则
imageinfo = "0.7.16"                               #图片信息
