[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adb_core = { path = "../adb_core" }
serde = { version = "1.0", features = ["derive"] } #序列化
serde_json = "1.0"                                 #序列化
